Update agent to fix instrumentation overhead