@@ -9,7 +9,7 @@ dependencies {
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
     implementation("org.apache.commons:commons-text:1.9")
 
-    api("com.beyondgrader.resource-agent:agent:2022.6.1")
+    api("com.beyondgrader.resource-agent:agent:2022.6.2")
     api("com.github.cs125-illinois.jeed:core:2022.6.1")
     api("com.github.cs125-illinois:jenisol:2022.6.2")
     api("io.kotest:kotest-runner-junit5:5.3.0")
@@ -29,7 +29,7 @@ tasks.withType(Test::class.java) {
     val agentJarPath = configurations["runtimeClasspath"].resolvedConfiguration.resolvedArtifacts.find {
         it.moduleVersion.id.group == "com.beyondgrader.resource-agent"
     }!!.file.absolutePath
-    jvmArgs("--enable-preview", "-javaagent:$agentJarPath")
+    jvmArgs("--enable-preview", "-javaagent:$agentJarPath", "-XX:+UseZGC")
 }
 publishing {
     publications {
